# Ranking-Glicko2

./: README.md  glicko.py  pyproject.toml
docs/: glicko.html  index.html  search.js
